<resources>
    <string name="app_name">The Ledger</string>
    <string name="splash_introText">The Ledger</string>
    <string name="splashTagline">Your Finances, Simplified.</string>
    <string name="copyright">© 2025 The Ledger</string>
    <string name="devtag_splash">Developed By Kavy Chaturvedi.</string>
    <string name="EnterDetailsLogin">Enter details to continue :</string>
    <string name="Welcome">Welcome to The Ledger</string>
    <string name="nameLogin">Name:</string>
    <string name="LoginSubtext">Secure PIN Login to Your Account</string>
    <string name="PinInput">Enter password</string>
    <string name="loginBtn">Already a customer? \n Login</string>
    <string name="signUpBtn">New Customer? \n sign up</string>
    <string name="Forget_pintxt">Forgot your PIN? Reset Here!</string>
    <string name="new_pin">Please enter your new 6-digit PIN</string>
    <string name="ConfirmationPin">Re-enter to confirm</string>
    <string name="home">Home</string>
    <string name="transaction">Transaction</string>
    <string name="analytics">Analytics</string>
    <string name="profile">Profile</string>
    <string name="Balance">Your Balance</string>
    <string name="app_desc">TheLedger is a personal expense tracker that helps you record, analyze, and manage your daily transactions with ease.</string>
    <string name="about_last_cmt">An app. Nothing more, nothing less.”</string>
    <string name="suggest_card">Suggestions? Fine.</string>
    <string name="suggest_input">Type. Don’t hurt yourself.</string>
    <string name="privacy_Heading">Privacy And Settings Menu</string>
    <string name="expensesicon">ExpensesIcon</string>

</resources>