<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/mainCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:padding="5dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="9dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/apptxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/lexend"
                    android:text="@string/app_name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_below="@id/apptxt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/icon" />

                <View
                    android:id="@+id/div1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/logo"
                    android:layout_marginVertical="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/aboutTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/div1"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/lexend"
                    android:text="ABOUT THE APP"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/div2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/aboutTxt"
                    android:layout_marginVertical="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/about_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/div2"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/lexend"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/app_desc"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/div3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/about_desc"
                    android:layout_marginVertical="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/black" />

                <RelativeLayout
                    android:id="@+id/dev_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/div3"
                    android:layout_marginTop="10dp"
                    android:padding="10dp">

                    <LinearLayout
                        android:id="@+id/devLL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true">

                        <TextView
                            android:id="@+id/DevTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/lexend"
                            android:text="Developer : "
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cavet"
                            android:text="Kavy Chaturvedi"
                            android:textSize="25sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/contact_ll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/devLL"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:id="@+id/install"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/insta"
                                android:layout_width="25dp"
                                android:layout_height="25dp"

                                android:src="@drawable/instagram" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/cavet"
                                android:text="Instagram"
                                android:textSize="20sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linkedll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground">

                            <ImageView
                                android:id="@+id/linkedin"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/linkedin" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/cavet"
                                android:text="Linked in"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/gitll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground">

                            <ImageView
                                android:id="@+id/git"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/github" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/cavet"
                                android:text="GitHub"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/verll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/contact_ll"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/verTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/lexend"
                            android:text="App Version : "
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cavet"
                            android:text="v1.0.0"
                            android:textSize="25sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/TermsOfUse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/verll"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/lexend"
                        android:text="Terms of Use"
                        android:textSize="17sp" />
                </RelativeLayout>

                <View
                    android:id="@+id/div4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/dev_info"
                    android:layout_marginVertical="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/div4"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/lexend"
                    android:text="@string/copyright"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/copyright"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/cavet"
                    android:text="@string/about_last_cmt"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="9dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/suggest_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/lexend"
                    android:text="@string/suggest_card"
                    android:textSize="20sp" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/suggest_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/suggest_txt"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/lexend"
                    android:hint="@string/suggest_input"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/sendBtn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_below="@id/suggest_input"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/send"

                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:contentDescription="Back"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/back" />

        <ProgressBar
            android:id="@+id/customProgress"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/custom_progress"
            android:progressDrawable="@drawable/custom_progress"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
